--- a/payroll_list.html
+++ b/payroll_list.html
@@ -206,7 +206,7 @@
                                         <th style="text-align:left;">商品ID</th>
                                         <th style="cursor: pointer;text-align:left;">状态</th>
                                         <th style="text-align:left;">商品信息</th>
-                                        <th style="text-align:center;">定价
+                                        <th style="text-align:center;">成本价
                                             <span class="inline_block">
                                                 <i class="layui-icon layui-icon-triangle-d topArrow sortprice"
                                                     data-type="asc"></i>
@@ -214,6 +214,7 @@
                                                     data-type="desc"></i>
                                             </span>
                                         </th>
+                                        <th>运费</th>
                                         <th style="text-align:center;">销售价
                                             <span class="inline_block">
                                                 <i class="layui-icon layui-icon-triangle-d topArrow sortprice"
