--- a/xinjianyinpinzhuanji.html
+++ b/xinjianyinpinzhuanji.html
@@ -337,7 +337,7 @@
 
 </html>
 <script type="text/javascript" src="layui-2.0/layui.js"></script>
-<!-- <script type="text/javascript" src="../layui-2.0/public.js"></script> -->
+<script type="text/javascript" src="../layui-2.0/public.js"></script>
 <!-- <script type="text/javascript" src="../layui-2.0/inputtags/inputTags.js"></script> -->
 <script type="text/javascript">
     layui.use(['element', 'jquery', 'form', 'layer', 'upload'], function () {
