--- a/index.html
+++ b/index.html
@@ -281,7 +281,6 @@
 				<div class="layui-form-item input-layout-one">
 					<label class="layui-form-label">单行输入框：</label>
 					<div class="layui-input-inline context">
-
 						<div class="input-second-container">
 							<input type="text" name="title" placeholder="输入搜索关键字" autocomplete="off"
 								class="layui-input">
@@ -394,6 +393,10 @@
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
 				</svg>日期选择</p>
+
+			<div class="layui-inline">
+				<input type="text" class="layui-input test1" placeholder="请选择日期">
+			</div>
 			<!-- 弹窗 -->
 			<div>
 			</div>
@@ -412,13 +415,32 @@
 	var dataResult = {};
 
 	//初始化layui
-	layui.use(['element', 'layer', 'form'], function () {
+	layui.use(['element', 'laydate', 'layer', 'form'], function () {
 		var element = layui.element,
 			form = layui.form,
+			laydate = layui.laydate,
 			$ = layui.$;
 
 		// $.ajax
 
+		//日期选择
+		laydate.render({
+			elem: '.test1', //指定元素
+			ready: function (date) {
+				//得到初始的日期时间对象：{year: 2017, month: 8, date: 18, hours: 0, minutes: 0, seconds: 0}
+				// console.log(date);
+				$('.laydate-footer-btns .laydate-btns-clear').text('重置'); //改变按钮text
+			},
+			done: function (value, date, endDate) {
+				//当选择日期之后改变按钮颜色
+				$('.laydate-footer-btns .laydate-btns-clear').css('color', "#333"); //重置按钮
+				$('.laydate-footer-btns .laydate-btns-now').css('color', "#333"); //现在按钮
+				// console.log(value); //得到日期生成的值，如：2017-08-18
+				// //得到日期时间对象：{year: 2017, month: 8, date: 18, hours: 0, minutes: 0, seconds: 0}
+				// console.log(date);
+				// console.log(endDate); //得结束的日期时间对象，开启范围选择（range: true）才会返回。对象成员同上。
+			}
+		});
 	})
 
 	//设置标签iframe高度
