--- a/iframe-2.0/search.html
+++ b/iframe-2.0/search.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="high-search-catalog">
 					<span>选择分类：</span>
-					<div class="display-inline" style="width: 471px;">
+					<div class="display-inline">
 						<cascader id="demo1"></cascader>
 					</div>
 				</div>
