--- a/index.html
+++ b/index.html
@@ -360,6 +360,10 @@
 					</select>
 				</form>
 			</div>
+			<p class="title">多级联下拉框</p>
+			<div>
+				<cascader id="demo2"></cascader>
+			</div>
 		</article>
 		<article id="checkbox">
 			<p class="title">
