--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
 				<span id="popup1" class="popup">弹窗1</span>
 				<span id="popup2" class="popup">弹窗2</span>
 				<span id="popup3" class="popup">弹窗3</span>
+				<span id="alert" class="popup">弹窗alert</span>
 
 			</div>
 		</article>
@@ -559,6 +560,18 @@
 				//按钮2回调
 				// layer.close(index); //如果设定了yes回调，需进行手工关闭
 				//return false 开启该代码可禁止点击该按钮关闭
+			}
+		});
+	})
+
+	$("#alert").click(function () {
+		layer.open({
+			title: '提示:',
+			content: '请输入搜索关键字',
+			success:function(data){
+			$(".layui-layer-dialog").addClass('alert');
+			$(".alert .layui-layer-title").show();
+			$('.layui-layer-setwin').show();
 			}
 		});
 	})
