--- a/daifashagnpinxiangqingzhanshi.html
+++ b/daifashagnpinxiangqingzhanshi.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" type="text/css" href="layui-2.0/css/public.css">
     <!-- 字体图标 -->
     <script src="layui-2.0/font/iconfont.js"></script>
+    <style>
+        .input-second-container,
+        .input-third-container {
+            position: relative;
+            width: 950px;
+        }
+    </style>
 </head>
 
 <body class="large">
@@ -331,9 +338,8 @@
                                 <div class="layui-form-item">
                                     <label class="layui-form-label"><span class="tip">*</span>图文介绍： </label>
                                     <div class="layui-input-block input-second-container lable-input-container">
-                                        <div class="book-information">
-                                            <input type="text" name="graphic-introduction" lay-verify="title"
-                                                autocomplete="off" placeholder="" class="layui-input">
+                                        <div class="layui-inline" style="width:984px;">
+                                            <textarea id="goods_desc"></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -468,17 +474,18 @@
         </div>
 
         <!-- 底部 -->
-        <div class="layui-footer"></div>
+        <!-- <div class="layui-footer"></div> -->
     </div>
 </body>
 
 </html>
 <script type="text/javascript" src="layui-2.0/layui.js"></script>
 <script type="text/javascript">
-    layui.use(['element', 'jquery', 'form', 'layer'], function () {
+    layui.use(['element', 'jquery', 'form','layedit', 'layer'], function () {
         // 变量声明
         var $ = layui.jquery,
             form = layui.form,
+            layedit = layui.layedit,
             element = layui.element,
             layer = layui.layer;
 
@@ -509,5 +516,8 @@
         $('.layui-btn').click(function () {
 
         })
+        var editIndex = layedit.build('goods_desc', {
+            height: 354,
+        });
     });
 </script>
